--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div class="nav">
         <ul>
             <li>logo</li>
-            <li id="user-input"><input type="text" placeholder="Enter Message"></li>
-            <li><button>Clear Board</button></li>
+            <li id="input-container"><input id="user-input" 
+                type="text" placeholder="Enter Message"></li>
+            <li><button id="clearBtn">Clear Board</button></li>
         </ul>
         
         <input type="checkbox" id="darkTheme" name="dark" value="dark">
