--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="nav">
         <ul>
-            <li>logo</li>
+            <li><img src="gecko-top-view-shape.svg" alt="gecko" class="gecko"></li>
             <li id="input-container"><input id="user-input" 
                 type="text" placeholder="Enter Message"></li>
             <li><button id="clearBtn">Clear Board</button></li>
