font+ general styles

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Prison Water Newts</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Bevan" rel="stylesheet">
     <link href="stylesheets/main.css" rel="stylesheet">
 </head>
 
@@ -33,7 +34,7 @@
     <main class="main-content">
 
         <div id="msg-container">
-            <p>Messages:</p>
+            <h3>Messages:</h3>
             <section id="msg-board">
                 <!-- msg output -->
             </section>
