--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Prison Water Newts</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Bevan" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Bevan" rel="stylesheet">
     <link href="stylesheets/main.css" rel="stylesheet">
 </head>
 
